# bot-keuangan-telegram

./: .gitignore  Makefile  alembic.ini  finance_bot.db  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py  vercel.json
api/: index.py  requirements.txt
app/api/: index.py
app/core/: config.py  database.py  prompts.py
app/models/: __init__.py  base.py  budget.py  category.py  recurring.py  transaction.py  user.py  wallet.py
app/services/: groq_service.py  ocr_service.py  report_service.py  sheets_service.py  transaction_service.py
app/templates/: dashboard.html  login.html
bot/handlers/: account.py  menu.py  report.py  transaction.py  wallet.py  wallet_interactive.py
migrations/: env.py
migrations/versions/: 111575e333fe_initial_schema.py  186df9dab340_remove_budgets_table.py  1c011c4842ff_initial_migration.py  928de8f9faf8_add_wallet.py  a615957eccec_add_is_primary_to_wallet.py
