[project]
name = "bot-keuangan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "groq>=1.5.0",
    "gspread>=6.2.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[webhooks]>=22.8",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
